--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "dependencies": {
         "cookie-parser": "^1.4.4",
         "express": "^4.16.4",
-        "got": "^9.6.0"
+        "got": "^9.6.0",
+        "vue-server-renderer": "^2.6.10"
     },
     "devDependencies": {
         "nodemon": "^1.18.10"
