set exact packages version

--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "deps": "npm i && cd ./server && npm i",
+    "deps": "npm ci && npm run deps:server && npm run deps:client",
+    "deps:server": "cd ./server && npm ci",
+    "deps:client": "cd ./client && npm ci",
+    
     "server:watch": "cd ./server && npm run start:watch",
+
+    "client:watch": "cd ./client && npm run serve",
     "client:build": "cd ./client && npm run build"
   },
   "dependencies": {},
   "devDependencies": {
-    "@vue/cli": "^3.5.5"
+    "@vue/cli": "3.5.5"
   }
 }
