--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.18.0",
+    "browser-cookies": "1.2.0",
     "core-js": "2.6.5",
+    "query-string": "6.5.0",
     "vue": "2.6.6",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
