--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,4 @@ services:
       - ./:/app/
     ports:
       - 3000:3000
-    command: bash -c "cd /app/ && npm run deps && npm run build && cd server && node ."
+    command: bash -c "cd /app/ && npm run deps && npm run client:build && cd server && node ."
