--- a/package.json
+++ b/package.json
@@ -1,51 +1,22 @@
 {
-  "name": "to-do-list",
+  "name": "thui",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node" : ">=8.12.0"
+    "node": ">=8.12.0",
+    "npm": "6.4.1"
   },
   "scripts": {
-    "deps": "npm i && cd ./server && npm i",
+    "deps": "npm ci && npm-run-all deps:*",
+    "deps:server": "cd ./server && npm ci",
+    "deps:client": "cd ./client && npm ci",
     "server:watch": "cd ./server && npm run start:watch",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "client:watch": "cd ./client && npm run serve",
+    "client:build": "cd ./client && npm run build"
   },
-  "dependencies": {
-    "vue": "^2.6.6"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "@vue/cli": "3.5.5",
+    "npm-run-all": "4.1.5"
+  }
 }
